--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.368.0",
     "moment": "^2.30.1",
+    "nanoid": "^5.0.7",
     "next": "14.2.1",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
