--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && prisma db push && prisma db seed && next build",
+    "build": "npx prisma generate && npx prisma db push && npx prisma db seed && next build",
     "start": "next start",
     "lint": "next lint",
     "serve": "next start"
