--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "eslint-config-next": "14.2.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.7.2",
     "typescript": "^5"
   }
 }
